im the biggest git im the biggest git

--- a/veckobrev.html
+++ b/veckobrev.html
@@ -30,7 +30,7 @@
         <ul class="list">
           <a href="omoss.html"> <li class="list-item">Om Oss </li> </a>
           <a href="kanot.html"> <li class="list-item">Kanot</li></a>
-          <a href="undgomsverksamhet.html"><li class="list-item">Ungdomsverksamhet </li> </a>
+          <a href="ungdomsverksamhet.html"><li class="list-item">Ungdomsverksamhet </li> </a>
           <a href="blimedlem.html""> <li class="list-item">Bli Medlem</li> </a>
           <a href="veckobrev.html""> <li class="list-item"">Veckobrev</li> </a> 
           <a href="https://www.klubbtryck.se/nhss/"><li class="list-item">Kläder</li></a>
