--- a/omoss.html
+++ b/omoss.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="author" content="Edvin Kurtsson">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
@@ -83,7 +84,7 @@ Vi är även i behov av suppliers med olika tjänster eller produkter som behöv
   -->  
   <div class="item9" style="background-color: #BFE4F4;"> 
    <br>
-   <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/sponsor.jpeg">
+   <img style="padding-right: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/sponsor.jpeg">
   <br>  
 
 
