--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="author" content="Edvin Kurtsson">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
