--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
+<html>
+<head>
 
+</head>
 <body>
 
 <div class="grid-container">
@@ -27,8 +30,8 @@
           <a href="omoss.html"> <li class="list-item">Om Oss </li> </a>
           <a href="kanot.html"> <li class="list-item">Kanot</li></a>
           <a href="ungdomsverksamhet.html"><li class="list-item">Ungdomsverksamhet </li> </a>
-          <a href="blimedlem.html"> <li class="list-item">Bli Medlem</li> </a>
-          <a href="veckobrev.html"> <li class="list-item">Veckobrev</li> </a> 
+          <a href="blimedlem.html""> <li class="list-item">Bli Medlem</li> </a>
+          <a href="veckobrev.html""> <li class="list-item"">Veckobrev</li> </a> 
           <a href="https://www.klubbtryck.se/nhss/"><li class="list-item">Kläder</li></a>
           <a href="nyheter.html"> <li class="list-item">Nyhetsarkiv</li> </a>
           <a href="#mobilemaps"> <li class="list-item"> Kontakt</li> </a>
@@ -81,7 +84,7 @@
   <div class="item9" style="background-color: #BFE4F4;"> 
    <br>
         
-   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551" id="mobilepicture">
+   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551"id="mobilepicture">
 
 
   <br>
