--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
-<html>
 <head>
 
 </head>
@@ -16,12 +15,13 @@
     <a href="index.html"> <img src="files/logga.png" style="max-width: 40%;">  </a>
   </div>
   <div class="item2"  >
-    <a href="omoss.html" id="desktop">Om Oss </a>
-    <a href="kanot.html" id="desktop">Kanot</a>
-    <a href="ungdomsverksamhet.html" id="desktop">Ungdomsverksamhet</a> 
-    <a href="blimedlem.html" id="desktop">Bli Medlem</a>
-    <a href="veckobrev.html" id="desktop">Veckobrev</a> 
-
+    <div id="desktop">
+    <a href="omoss.html" >Om Oss </a>
+    <a href="kanot.html" >Kanot</a>
+    <a href="ungdomsverksamhet.html">Ungdomsverksamhet</a> 
+    <a href="blimedlem.html">Bli Medlem</a>
+    <a href="veckobrev.html" >Veckobrev</a> 
+  </div>
    
       <div class="menu" id="mobile">
         
@@ -30,8 +30,8 @@
           <a href="omoss.html"> <li class="list-item">Om Oss </li> </a>
           <a href="kanot.html"> <li class="list-item">Kanot</li></a>
           <a href="ungdomsverksamhet.html"><li class="list-item">Ungdomsverksamhet </li> </a>
-          <a href="blimedlem.html""> <li class="list-item">Bli Medlem</li> </a>
-          <a href="veckobrev.html""> <li class="list-item"">Veckobrev</li> </a> 
+          <a href="blimedlem.html"> <li class="list-item">Bli Medlem</li> </a>
+          <a href="veckobrev.html"> <li class="list-item>Veckobrev</li> </a> 
           <a href="https://www.klubbtryck.se/nhss/"><li class="list-item">Kläder</li></a>
           <a href="nyheter.html"> <li class="list-item">Nyhetsarkiv</li> </a>
           <a href="#mobilemaps"> <li class="list-item"> Kontakt</li> </a>
@@ -42,10 +42,12 @@
 
 
   </div>
+  <div id="desktop1">
   <div class="item3">
-    <a href="https://www.klubbtryck.se/nhss/" id="desktop">Kläder</a>
+    <a href="https://www.klubbtryck.se/nhss/" >Kläder</a>
     <a href="nyheter.html" id="desktop">Nyhetsarkiv</a>
     <a href="#mobilemaps" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
+  </div>
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
@@ -70,7 +72,7 @@
   <div class="item7" style="background-color: #BFE4F4;">
     <H1> Senaste styrelsemötet och nya listor <br></H1>
     <h2>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean magna eros, laoreet et volutpat id, tristique et neque. Mauris sed sem consectetur, egestas turpis id, consectetur nisi. Morbi iaculis lacus nec lacinia lobortis. Aliquam fermentum varius mauris, ut pellentesque tellus accumsan et. Vivamus auctor cursus sapien, vel interdum augue feugiat at. 
+      Här är informationen från senaste styrelsemötet. Vi har kommit fram till många olika saker. Bland annat det första det andra och det tredje. Listor har också kommit ut för isättning av båtar samt bryggvakt.
     </h2>
 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -84,7 +86,7 @@
   <div class="item9" style="background-color: #BFE4F4;"> 
    <br>
         
-   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551"id="mobilepicture">
+   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551"id="mobilepicture1">
 
 
   <br>
@@ -177,7 +179,7 @@
 
   </div>
   -->
-  <div class="item13" style="background-color: #BFE4F4;" id="mobilefooter">
+  <div class="item13" style="background-color: #BFE4F4;" id="mobilefooterleft">
     <br> <br> <br>            
    &nbsp; &nbsp; &nbsp; &nbsp; Öppettider <br> &nbsp; &nbsp; &nbsp; &nbsp;Måndag till fredag 08:00-12:00 <br> <br> <br> <br> <br> <br> <br> <br> <br> 
    &nbsp; &nbsp; &nbsp; &nbsp;Kontakta Oss <br> 
@@ -195,7 +197,7 @@
   <div class="item14" style="background-color: #BFE4F4;">
   </div> 
    --> 
-  <div class="item15" style="background-color: #BFE4F4;" id="mobilefooter">
+  <div class="item15" style="background-color: #BFE4F4;" id="mobilefooterright">
     <br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.
     4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!
