--- a/omoss.html
+++ b/omoss.html
@@ -5,7 +5,6 @@
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
-<html>
 <head>
 
 </head>
@@ -30,8 +29,8 @@
           <a href="omoss.html"> <li class="list-item">Om Oss </li> </a>
           <a href="kanot.html"> <li class="list-item">Kanot</li></a>
           <a href="ungdomsverksamhet.html"><li class="list-item">Ungdomsverksamhet </li> </a>
-          <a href="blimedlem.html""> <li class="list-item">Bli Medlem</li> </a>
-          <a href="veckobrev.html""> <li class="list-item"">Veckobrev</li> </a> 
+          <a href="blimedlem.html"> <li class="list-item">Bli Medlem</li> </a>
+          <a href="veckobrev.html"> <li class="list-item">Veckobrev</li> </a> 
           <a href="https://www.klubbtryck.se/nhss/"><li class="list-item">Kläder</li></a>
           <a href="nyheter.html"> <li class="list-item">Nyhetsarkiv</li> </a>
           <a href="#mobilemaps"> <li class="list-item"> Kontakt</li> </a>
