--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div class="grid-container">
   <div class="item1">
-    <a href="index.html"> <img src="files/logga.png" style="max-width: 40%;">  </a>
+    <a href="index.html"> <img src="files/logga.png" style="max-width: 40%;" alt="">  </a>
   </div>
   <div class="item2"  >
     <div id="desktop">
@@ -51,7 +51,7 @@
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
-  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/batomoss.jpg">
+  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/batomoss.jpg" alt="">
   <br>
   </div>
   <!--
@@ -86,7 +86,7 @@
   <div class="item9" style="background-color: #BFE4F4;"> 
    <br>
         
-   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551"id="mobilepicture1">
+   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551"id="mobilepicture1" alt="">
 
 
   <br>
