--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="kanot.html"> <li class="list-item">Kanot</li></a>
           <a href="ungdomsverksamhet.html"><li class="list-item">Ungdomsverksamhet </li> </a>
           <a href="blimedlem.html"> <li class="list-item">Bli Medlem</li> </a>
-          <a href="veckobrev.html"> <li class="list-item>Veckobrev</li> </a> 
+          <a href="veckobrev.html"> <li class="list-item">Veckobrev</li> </a> 
           <a href="https://www.klubbtryck.se/nhss/"><li class="list-item">Kläder</li></a>
           <a href="nyheter.html"> <li class="list-item">Nyhetsarkiv</li> </a>
           <a href="#mobilemaps"> <li class="list-item"> Kontakt</li> </a>
@@ -45,8 +45,8 @@
   <div id="desktop1">
   <div class="item3">
     <a href="https://www.klubbtryck.se/nhss/" >Kläder</a>
-    <a href="nyheter.html" id="desktop">Nyhetsarkiv</a>
-    <a href="#mobilemaps" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
+    <a href="nyheter.html"">Nyhetsarkiv</a>
+    <a href="#mobilemaps" class="button"">&nbsp;Kontakt&nbsp;</a>
   </div>
   </div>  
   <div class="item4" style="background-color: #BFE4F4;"  >
@@ -86,7 +86,7 @@
   <div class="item9" style="background-color: #BFE4F4;"> 
    <br>
         
-   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551"id="mobilepicture1" alt="">
+   <img src="https://bildix.mmcloud.se/bildix/api/images/kpTnboHCr3OqY3sieb1QTf2sq0k.jpeg?fit=crop&w=980&h=551" id="mobilepicture1" alt="">
 
 
   <br>
