--- a/omoss.html
+++ b/omoss.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
+<head>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="author" content="Edvin Kurtsson">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
-<head>
+
 
 </head>
 <body>
 
 <div class="grid-container">
   <div class="item1">
-    <a href="index.html"> <img src="files/logga.png" style="max-width: 40%;">  </a>
+    <a href="index.html"> <img src="files/logga.png" style="max-width: 40%;" alt="">  </a>
   </div>
   <div class="item2"  >
-    <a href="omoss.html" id="desktop">Om Oss </a>
+    <div id="desktop">
+    <a href="omoss.html">Om Oss </a>
     <a href="kanot.html" id="desktop">Kanot</a>
-    <a href="ungdomsverksamhet.html" id="desktop">Ungdomsverksamhet</a> 
-    <a href="blimedlem.html" id="desktop">Bli Medlem</a>
-    <a href="veckobrev.html" id="desktop">Veckobrev</a> 
-
+    <a href="ungdomsverksamhet.html">Ungdomsverksamhet</a> 
+    <a href="blimedlem.html">Bli Medlem</a>
+    <a href="veckobrev.html">Veckobrev</a> 
+  </div>
    
       <div class="menu" id="mobile">
         
@@ -41,14 +43,16 @@
 
 
   </div>
+  <div id="desktop1">
   <div class="item3">
-    <a href="https://www.klubbtryck.se/nhss/" id="desktop">Kläder</a>
-    <a href="nyheter.html" id="desktop">Nyhetsarkiv</a>
-    <a href="#mobilemaps" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
+    <a href="https://www.klubbtryck.se/nhss/">Kläder</a>
+    <a href="nyheter.html"Nyhetsarkiv</a>
+    <a href="#mobilemaps" class="button">&nbsp;Kontakt&nbsp;</a>
   </div>  
+</div>
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
-  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/klubbhus.jpeg">
+  <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/klubbhus.jpeg" alt="">
   <br>
   </div>
   <!--
@@ -83,7 +87,7 @@ Vi är även i behov av suppliers med olika tjänster eller produkter som behöv
   -->  
   <div class="item9" style="background-color: #BFE4F4;"> 
    <br>
-   <img style="padding-right: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/sponsor.jpeg">
+   <img style="padding-right: 30px; padding-bottom: 10px;" id="mobilepicture1" src="files/sponsor.jpeg">
   <br>  
 
 
@@ -91,7 +95,7 @@ Vi är även i behov av suppliers med olika tjänster eller produkter som behöv
   </div>
 
   
-  <div class="item13" style="background-color: #BFE4F4;" id="mobilefooter">
+  <div class="item13" style="background-color: #BFE4F4;" id="mobilefooterleft">
     <br> <br> <br>            
    &nbsp; &nbsp; &nbsp; &nbsp; Öppettider <br> &nbsp; &nbsp; &nbsp; &nbsp;Måndag till fredag 08:00-12:00 <br> <br> <br> <br> <br> <br> <br> <br> <br> 
    &nbsp; &nbsp; &nbsp; &nbsp;Kontakta Oss <br> 
@@ -109,12 +113,9 @@ Vi är även i behov av suppliers med olika tjänster eller produkter som behöv
   <div class="item14" style="background-color: #BFE4F4;">
   </div> 
    --> 
-  <div class="item15" style="background-color: #BFE4F4;" id="mobilefooter">
+  <div class="item15" style="background-color: #BFE4F4;" id="mobilefooterright">
     <br>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.
-    4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!
-    4f13.1!3m3!1m2!1s0x465f5ea05a12739b%3A0x95f7354abfef82c7!2sNyn%C3%A4shamns%20Segels%C3%A4llskap!5e0!3m2!1ssv!2sse!4v1674645100008!5m2!1ssv!2sse" 
-    id="mobilemaps" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f5ea05a12739b%3A0x95f7354abfef82c7!2sNyn%C3%A4shamns%20Segels%C3%A4llskap!5e0!3m2!1ssv!2sse!4v1674645100008!5m2!1ssv!2sse" id="mobilemaps" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </div>
 
