--- a/ungdomsverksamhet.html
+++ b/ungdomsverksamhet.html
@@ -15,12 +15,13 @@
     <a href="index.html"> <img src="files/logga.png" style="max-width: 40%;">  </a>
   </div>
   <div class="item2"  >
-    <a href="omoss.html" id="desktop">Om Oss </a>
-    <a href="kanot.html" id="desktop">Kanot</a>
-    <a href="ungdomsverksamhet.html" id="desktop">Ungdomsverksamhet</a> 
-    <a href="blimedlem.html" id="desktop">Bli Medlem</a>
-    <a href="veckobrev.html" id="desktop">Veckobrev</a> 
-
+    <div id="desktop">
+    <a href="omoss.html">Om Oss </a>
+    <a href="kanot.html">Kanot</a>
+    <a href="ungdomsverksamhet.html">Ungdomsverksamhet</a> 
+    <a href="blimedlem.html">Bli Medlem</a>
+    <a href="veckobrev.html">Veckobrev</a> 
+  </div>
    
       <div class="menu" id="mobile">
         
@@ -41,11 +42,13 @@
 
 
   </div>
+  <div id="desktop1">
   <div class="item3">
-    <a href="https://www.klubbtryck.se/nhss/" id="desktop">Kläder</a>
-    <a href="nyheter.html" id="desktop">Nyhetsarkiv</a>
-    <a href="#mobilemaps" class="button" id="desktop">&nbsp;Kontakt&nbsp;</a>
+    <a href="https://www.klubbtryck.se/nhss/">Kläder</a>
+    <a href="nyheter.html" >Nyhetsarkiv</a>
+    <a href="#mobilemaps" class="button">&nbsp;Kontakt&nbsp;</a>
   </div>  
+</div>
   <div class="item4" style="background-color: #BFE4F4;"  >
   <br>    
   <img style="padding-left: 30px; padding-bottom: 10px;" id="mobilepicture" src="files/lager.jpeg">
@@ -107,7 +110,7 @@
   </div>
 
   
-  <div class="item13" style="background-color: #BFE4F4;" id="mobilefooter">
+  <div class="item13" style="background-color: #BFE4F4;" id="mobilefooterleft">
     <br> <br> <br>            
    &nbsp; &nbsp; &nbsp; &nbsp; Öppettider <br> &nbsp; &nbsp; &nbsp; &nbsp;Måndag till fredag 08:00-12:00 <br> <br> <br> <br> <br> <br> <br> <br> <br> 
    &nbsp; &nbsp; &nbsp; &nbsp;Kontakta Oss <br> 
@@ -125,7 +128,7 @@
   <div class="item14" style="background-color: #BFE4F4;">
   </div> 
    --> 
-  <div class="item15" style="background-color: #BFE4F4;" id="mobilefooter">
+  <div class="item15" style="background-color: #BFE4F4;" id="mobilefooterright">
     <br>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2061.
     4562557675717!2d17.941270816054566!3d58.89023678150737!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!
