--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<meta name="description" http-equiv="content-type" content = "text/html" charset = "utf-8"/>
+<meta name="description" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="author" content="Edvin Kurtsson">
 <link rel="stylesheet" href="style.css">
