--- a/ungdomsverksamhet.html
+++ b/ungdomsverksamhet.html
@@ -169,47 +169,46 @@
        
         switch(x){
           case 'gul' || 'Gul' || 'GUL':
-          bytfarg('yellow')
+          bytfarg(x,'yellow')
             break;
           case 'röd' || 'Röd' || 'RÖD':
-            bytfarg('red')
+            bytfarg(x,'red')
             break
           case 'blå' || 'Blå' || 'BLÅ':
-            bytfarg('blue')
+            bytfarg(x,'blue')
             break;
           case 'orange' || 'Orange' || 'ORANGE':
-            bytfarg('orange')
+            bytfarg(x,'orange')
             break;
           case 'lila' || 'Lila' || 'LILA':
-            bytfarg('purple')
+            bytfarg(x,'purple')
             break;
           case 'rosa' || 'Rosa' || 'ROSA':
-            bytfarg('pink')
+            bytfarg(x,'pink')
             break;
           case 'grön' || 'Grön' || 'GRÖN':
-            bytfarg('green')
+            bytfarg(x,'green')
 
             break;
           case 'svart' || 'Svart' || 'SVART':
-            bytfarg('black')
+            bytfarg(x,'black')
             break;
           case 'vit' || 'Vit' || 'VIT':
-            bytfarg('white')
+            bytfarg(x,'white')
             break;
           case 'guld' || 'Guld' || 'GULD':
-            bytfarg('gold')
+            bytfarg(x,'gold')
             break;
           default: 
           document.getElementById("fargnu").innerHTML = "Den färgen finns inte möjlig.";
           document.getElementById("gifen").src="files/giphy.gif"
         }
       }
-      function bytfarg(y){
+      function bytfarg(x,y){
         document.getElementById("fargtext").style.color=y
-        document.getElementById("fargnu").innerHTML = y;
+        document.getElementById("fargnu").innerHTML = x;
         document.getElementById("fargnu").style.color=y;
-        document.getElementById("gifen").src="files/gipher.gif";
-
+        document.getElementById("gifen").src="files/gipher.gif";  
       }
       </script>
     
@@ -220,7 +219,7 @@
     <p><input id="textinput" type="text"></p>
     <button onclick="textfarg()">Skriv rätt, byt färg</button>
     <p id = fargnu> Svart </p>
-    <img id="gifen" src="files/gipher.gif">
+    <img id="gifen" src="">
   </div>
 
   
