--- a/index.html
+++ b/index.html
@@ -7,41 +7,10 @@
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
 
-<script>
-  window.onmousemove = function(e) {
-    date = new Date();
-    year = date.getFullYear();
-    month = date.getMonth() + 1;
-    day = date.getDate();
-    document.getElementsByClassName("currentdate")[0].innerHTML = "Dagens datum " + day + "/" + month + "/" + year;
-    if (e.target.classList.contains('date')) {
-    		//	Content of date which is hovered
-        var $target = e.target.nextElementSibling;
-        
-        //	Only work with hovered target
-        //	Add visible class hovered elem to distinguish
-        if (!$target.classList.contains('visible')) {
-        		$target.classList.add('visible');
-        } else {
-            //	Get viewport offset of tooltip element
-            var offset = $target.parentElement.getBoundingClientRect();
-            //	Tooltip distance from mouse(px)
-            var tipDist = 15;
-            //	Calc and set new tooltip location
-            $target.style.top = (e.clientY - offset.top + tipDist) + 'px';
-            $target.style.left = (e.clientX - offset.left + tipDist) + 'px';
-        }
-    } else {
-    		//	Remove visible class
-        var floattext = document.getElementsByClassName('floattext');
-        for (var i = 0; i < floattext.length; i++) {
-        		floattext[i].classList.remove('visible');
-        }
-    }
 
-};
+<script src="script.js"></script>
 
-</script>
+
 </head>
 <body>
 
