--- a/ungdomsverksamhet.html
+++ b/ungdomsverksamhet.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<head>
 <meta http-equiv="content-type" content = "text/html" charset = "utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="author" content="Edvin Kurtsson">
@@ -6,6 +7,7 @@
 <link rel="icon" type="image/x-icon" href="files/logga.png">
 <title>NSS</title>
 <html>
+  <script src="script.js"></script>
 </head>
 <style>
   .grid-container{
@@ -141,76 +143,13 @@
   </div>
  
   <div class=item11 style="background-color: #BFE4F4;">
-    <script>
-      function bildbyte()
-      { 
-        var x = Math.floor(Math.random()*3);
-        if(x==0){
-          var y = "files/windsurf.jpeg"
-        }
-        else if (x==1){
-          var y = "files/logga.png"
-        }
-        else{
-            var y="files/piratbat.png"
-        }
-        document.getElementById("bild").src=y;
-      }
-      </script>
+   
     <img style="padding-left: 30px; padding-top: 30px;" id="bild" src="files/piratbat.png">
     <p><input type="button" value="Slumpa bild!" onclick="bildbyte()"></p>
   </div>
 
   <div class="item12" style="background-color: #BFE4F4" >
-    <script>
-      function textfarg()
-      { 
-        var x = document.getElementById("textinput").value;;
-       
-        switch(x){
-          case 'gul' || 'Gul' || 'GUL':
-          bytfarg(x,'yellow')
-            break;
-          case 'röd' || 'Röd' || 'RÖD':
-            bytfarg(x,'red')
-            break
-          case 'blå' || 'Blå' || 'BLÅ':
-            bytfarg(x,'blue')
-            break;
-          case 'orange' || 'Orange' || 'ORANGE':
-            bytfarg(x,'orange')
-            break;
-          case 'lila' || 'Lila' || 'LILA':
-            bytfarg(x,'purple')
-            break;
-          case 'rosa' || 'Rosa' || 'ROSA':
-            bytfarg(x,'pink')
-            break;
-          case 'grön' || 'Grön' || 'GRÖN':
-            bytfarg(x,'green')
 
-            break;
-          case 'svart' || 'Svart' || 'SVART':
-            bytfarg(x,'black')
-            break;
-          case 'vit' || 'Vit' || 'VIT':
-            bytfarg(x,'white')
-            break;
-          case 'guld' || 'Guld' || 'GULD':
-            bytfarg(x,'gold')
-            break;
-          default: 
-          document.getElementById("fargnu").innerHTML = "Den färgen finns inte möjlig.";
-          document.getElementById("gifen").src="files/giphy.gif"
-        }
-      }
-      function bytfarg(x,y){
-        document.getElementById("fargtext").style.color=y
-        document.getElementById("fargnu").innerHTML = x;
-        document.getElementById("fargnu").style.color=y;
-        document.getElementById("gifen").src="files/gipher.gif";  
-      }
-      </script>
     
     <h1>Lekhörna</h1>
     <br>
