--- a/ungdomsverksamhet.html
+++ b/ungdomsverksamhet.html
@@ -119,7 +119,7 @@
   </div>
   <div class="item7" style="background-color: #BFE4F4;">
     <H1> Knopskola <br></H1>
-    <h2>
+    <h2 id="text1">
       Vi tycker att det kan vara ganska bra att lära sig några knopar innan lägret. <br>
       Om du har tid rekommenderar vi skarpt den här videon.
     </h2>
@@ -146,7 +146,10 @@
    
     <img style="padding-left: 30px; padding-top: 30px;" id="bild" src="files/piratbat.png">
     <p><input type="button" value="Slumpa bild!" onclick="bildbyte()"></p>
+    
   </div>
+
+
 
   <div class="item12" style="background-color: #BFE4F4" >
 
